Set up secure env handling: ignore .env and add run.sh script